fixed css stylingoverflow

--- a/src/app/screens/ArtPortfolio/ArtPortfolio.scss
+++ b/src/app/screens/ArtPortfolio/ArtPortfolio.scss
@@ -1,13 +1,21 @@
 .art-gallery-container {
     padding: 1rem;
-    // display: grid;
-    // flex-direction: row;
-    // gap: 1rem;
     width: 100%;
-    // // grid-template-columns: repeat(auto, 1fr);
-    // // grid-template-columns: 0.5fr 0.5fr 0.5fr;
-    // grid-template-columns: repeat(4, minmax(200px, 1fr));
+    box-sizing: border-box;
+    max-width: 100%;
+    flex: 1 1 auto;
 
     column-count: 4;
     column-gap: 16px;
+
+    .img-content-container {
+        break-inside: avoid;
+        margin-bottom: 16px;
+
+        .img-content-image {
+            width: 100%;
+            display: block;
+            height: auto;
+        }
+    }
 }
