--- a/src/app/screens/Envelope/Envelope.scss
+++ b/src/app/screens/Envelope/Envelope.scss
@@ -40,8 +40,11 @@
 
     .env-body-container {
         display: flex;
+        flex-direction: column;
         width: 100%;
         height: 100%;
+
+        overflow-y: scroll;
     }
 
 }
